--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Saurav kumar
-logo: /assets/img/headshot_circle.png
-#description: text below image
-show_downloads: false
+#logo: /assets/img/headshot_circle.png
+description: text below image
+#show_downloads: false
 theme: jekyll-theme-minimal
